--- a/app/globals.css
+++ b/app/globals.css
@@ -98,9 +98,9 @@ body{
 .topbar-icons a:has(img[alt="Instagram"]){
   background:linear-gradient(45deg,#131212,hwb(59 8% 11%),#80da8c,#33e706,#0a0a0a);
 }
-.topbar-icons a:has(img[alt="reddit"]){  background:#5ce40d; }
+.topbar-icons a:has(img[alt="reddit"]){  background:#65df1e; }
 .topbar-icons a:has(img[alt="X"])       {  background:#1dc00e; }
-.topbar-icons a:has(img[alt="Bluesky"]) {  background:#12b112; }
+.topbar-icons a:has(img[alt="Bluesky"]) {  background:#22b122; }
 .topbar-icons a:has(img[alt="Telegram"]){  background:#0dda62; }
 
 /* =========================
